updated dir structure

--- a/src/[[PROJECT_NAME]]/Modules/Main/View/Base.lproj/Main.storyboard
+++ b/src/[[PROJECT_NAME]]/Modules/Main/View/Base.lproj/Main.storyboard
@@ -3,12 +3,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="__PROJECT_NAME__" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="TestProject" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -17,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="90s-AQ-BpS">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="90s-AQ-BpS">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <connections>
                                     <segue destination="46e-zP-Ib9" kind="embed" id="O0x-pZ-dtH"/>
@@ -25,6 +26,12 @@
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="90s-AQ-BpS" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="7fH-R4-6Xf"/>
+                            <constraint firstItem="90s-AQ-BpS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="NDy-mK-LC2"/>
+                            <constraint firstAttribute="trailing" secondItem="90s-AQ-BpS" secondAttribute="trailing" id="QLX-df-73H"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="90s-AQ-BpS" secondAttribute="bottom" id="sBt-N3-hvd"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
